Fix footer spacing

--- a/src/styles/constants.css
+++ b/src/styles/constants.css
@@ -118,11 +118,11 @@ footer {
 	bottom: 0;
 	min-height: var(--footer-height);
 	width: 100%;
-	padding: 10px 20px;
+	padding: 6px 20px 2px;
 
 	display: flex;
-	flex-direction: column;
-	gap: 10px;
+	flex-direction: column-reverse;
+	gap: 4px;
 
 	box-shadow: 0px 0px 5px var(--accent-main-dark);
 	background-color: var(--bg-main);
@@ -139,21 +139,20 @@ footer {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		gap: 10px;
+		gap: 8px;
 
 		text-align: center;
-		font-size: 20px;
+		font-size: 15px;
 		color: var(--text-strong);
 	}
 
 	& .contact-container {
 		display: flex;
 		flex-direction: column;
-		align-items: end;
 	}
 
 	& #contact-btn {
-		padding: 5px 10px;
+		padding: 10px;
 		border: 1px solid currentColor;
 		border-radius: 5px;
 
@@ -170,16 +169,29 @@ footer {
 		& .socials {
 			display: flex;
 		}
+
+		& .author {
+			gap: 10px;
+			font-size: 20px;
+		}
+
+		& .contact-container {
+			align-items: end;
+		}
 	}
 }
 
 .fa.fa-github {
 	color: currentColor;
-	font-size: 30px;
+	font-size: 20px;
 
 	&:hover {
 		transition: transform 0.4s ease-in-out;
 		transform: rotate(-360deg) scale(1.3);
+	}
+
+	@media (min-width: 700px) {
+		font-size: 30px;
 	}
 }
 /* ---------------     /Footer     --------------- */
